# agentx

./: .gitignore  =1.75.5  Dockerfile.green  Dockerfile.purple  EXAMPLE OUTPUT.txt  NEW EXAMPLE-OUTPUT.txt  Output.txt  README.md  pyproject.toml  sample.env
.github/workflows/: docker-publish.yml
data/rag_cache/instance_1/socbenchd_1_01-energy/: default__vector_store.json  docstore.json  index_store.json
scenarios/GreenAgent/: endpoint_evaluator.py  green.py  mcp_server.py  models.py  query_loader.py  rag_retriever.py  scenario.toml  scenarios.py
scenarios/GreenAgent/benchmark/socbenchd_1/04-consumer discretionary/: queries.json
scenarios/GreenAgent/benchmark/socbenchd_1/08-information technology/: queries.json
scenarios/GreenAgent/benchmark/socbenchd_1/09-communication services/: queries.json
scenarios/GreenAgent/benchmark/socbenchd_1/11-real estate/: queries.json
scenarios/GreenAgent/benchmark/socbenchd_2/01-energy/: queries.json
scenarios/GreenAgent/benchmark/socbenchd_2/03-industrials/: queries.json
scenarios/GreenAgent/benchmark/socbenchd_2/05-consumer staples/: queries.json
scenarios/GreenAgent/benchmark/socbenchd_2/08-information technology/: queries.json
scenarios/GreenAgent/benchmark/socbenchd_2/11-real estate/: queries.json
scenarios/GreenAgent/benchmark/socbenchd_3/03-industrials/: queries.json
scenarios/GreenAgent/socbenchsc/: LICENSE
scenarios/GreenAgent/socbenchsc/tests/: test_node_visitor.py  variable.py
scenarios/GreenAgent/socrag/: endpointparser.py  openapiparser.py
scenarios/PurpleAgent/: auditor_agent.py  auditor_executor.py  base_executor.py  coder_agent.py  multi_executor.py  orchestrator_executor.py  purple.py  purple_executor.py  purple_orchestrator.py  single_executor.py
scenarios/socbench/: adk_debate_judge.py  code_generator.py  endpoint_evaluator.py  endpoint_normalizer.py  green.py  mcp_server.py  mcp_tools.py  metric_evaluator.py  models.py  openapi_loader.py  purple.py  purple_executor.py  query_loader.py  rag_retriever.py  scenario.toml  scenarios.py
scenarios/socbench/socbenchsc/: .flake8  README.md  pyproject.toml
scenarios/socbench/socbenchsc/src/socbenchsc/: __init__.py  analysis.py  generator.py  node_visitor.py  value_handler.py
scenarios/socbench/socbenchsc/tests/: test_analysis.py  test_generator.py
src/agentbeats/: client.py  client_cli.py  run_scenario.py
(+326 files in other folders)
