[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbeats-tutorial"
version = "0.1.0"
description = "Agentbeats Tutorial"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.5",
    "analysis>=0.1.7",
    "embeddings>=0.0.8",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.116.1",
    "google-adk>=1.14.1",
    "google-genai>=1.36.0",
    "httpx>=0.28.1",
    "llama-index-core>=0.14.12",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-vector-stores-faiss>=0.5.2",
    "mcp[cli]>=1.14.0",
    "openai>=2.8.1",
    "pydantic>=2.11.9",
    "pytest>=9.0.1",
    "python-dotenv>=1.1.1",
    "toml>=0.10.2",
    "uvicorn[standard]>=0.35.0",
    "v1>=0.12.3",
    "websockets>=15.0.1",
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[tool.uv]
package = true
dev-dependencies = [
    "mypy>=1.18.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentbeats"]
