[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbeats-tutorial"
version = "0.1.0"
description = "Agentbeats Tutorial"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.5",
    "analysis>=0.1.7",
    "google-adk>=1.14.1",
    "google-genai>=1.36.0",
    "mcp[cli]>=1.14.0",
    "openai>=2.8.1",
    "pydantic>=2.11.9",
    "pytest>=9.0.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "v1>=0.12.3",
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[tool.uv]
package = true
dev-dependencies = [
    "mypy>=1.18.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentbeats"]
